# refcode

./: .clang-format  .gitmodules  README.md
asio/graciously-shutdown/: CMakeLists.txt  main.cpp  third-party
asio/recurring-task/: main.cpp
base-derived/: main.cpp  test
boost-fs/: boost-fs  main.cpp
boost/asio-recurring-task/: CMakeLists.txt  main.cpp  recurring-task
boost/asio-serial/: .gitignore  CMakeLists.txt  async_serial.cpp  async_serial.hpp  buffered_async_serial.cpp  buffered_async_serial.hpp  log.hpp  main.cpp  serial
boost/asio-ssl/: CMakeLists.txt  client_connection.hpp  main.cpp  server.hpp  server_connection.hpp  ssl
boost/file-system/: CMakeLists.txt  main.cpp
boost/program-options/: CMakeLists.txt  boost-po  main.cpp
c-obfuscated-type/: main.cpp  test
callable/: main.cpp  test
const-vector/: main.cpp  test
dbg-macro/: CMakeLists.txt  main.cpp
deadlock/: CMakeLists.txt  main.cpp
empty/: CMakeLists.txt  test
fmt/: CMakeLists.txt  Makefile  main.cpp
future/: CMakeLists.txt  future.cpp  test
ifstream/: CMakeLists.txt  main.cpp  test
listener/: CMakeLists.txt  main.cpp  shared_observer.hpp  shared_subject.hpp  test  test_observers  timeval.hpp  token_observer.cpp  unique_observer.hpp
listener/src/: main.cpp  test_types.hpp  timeval.hpp  utils.hpp
listener/src/auto_token/: subject.cpp  subject.hpp  subject2.hpp  test.cpp  test.hpp  token.hpp
listener/src/shared/: observer.hpp  subject.hpp  test.cpp  test.hpp
listener/src/signals/: test.cpp  test.hpp
listener/src/token/: subject.cpp  subject.hpp
listener/src/unique/: subject.hpp  subject2.hpp  test.cpp  test.hpp
listener/src/value_token/: subject.cpp  subject.hpp  test.cpp  test.hpp
live-data/: CMakeLists.txt  test
live-data/src/: live_data.hpp  main.cpp  token.cpp  token.hpp
live-data/src/live/: value.hpp
live-data/src/observable/: auto_token.hpp  removable.hpp  subject.cpp  subject.hpp  token.cpp  token.hpp  value.cpp  value.hpp
median/: CMakeLists.txt  main.cpp
py-cpp/: .gitignore  Makefile  pysystem.cpp  setup.py  test.py
regex/: .gitignore  CMakeLists.txt  main.cpp
rounding/: CMakeLists.txt  main.cpp
set-nested-lambdas/: main.cpp  test
string-view/: CMakeLists.txt  main.cpp
